k8s/apigw-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: microsvc

spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "true"
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        framework: spring
        app: api-gateway

    spec:
      containers:
      - name: api-gateway
        image: datnd2711/microsv-apigw-svc:latest
        ports:
        - containerPort: 8080
          name: http-apigw
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: microsvc

spec:
  selector:
    app: api-gateway
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http-apigw
  type: ClusterIP
