k8s/fe-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-fe
  namespace: microsvc

spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: datnd2711/microsv-app-fe:latest
        ports:
        - containerPort: 80
          name: http-ecom-fe
---
apiVersion: v1
kind: Service
metadata:
  name: ecom-frontend-service
  namespace: microsvc

spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http-ecom-fe
  type: ClusterIP
