k8s/identity-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  namespace: microsvc
  annotations:
    sidecar.opentelemetry.io/inject: "true"
    instrumentation.opentelemetry.io/inject-java: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "true"
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: identity-service
        framework: spring

    spec:
      containers:
      - name: identity-service
        image: datnd2711/microsv-identity-svc:latest
        ports:
        - containerPort: 9898
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: microsvc

spec:
  selector:
    app: identity-service
  ports:
  - protocol: TCP
    port: 9898
    targetPort: 9898
  type: ClusterIP
