k8s/noti-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: microsvc
  annotations:
    sidecar.opentelemetry.io/inject: "true"
    instrumentation.opentelemetry.io/inject-java: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "true"
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: notification-service
        framework: spring

    spec:
      containers:
      - name: notification-service
        image: datnd2711/microsv-noti-svc:v5
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: microsvc
spec:
  selector:
    app: notification-service
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
  type: ClusterIP
  # Enable session affinity
  # sessionAffinity: ClientIP
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800  # 3 hours
