k8s/order-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: microsvc
  annotations:
    sidecar.opentelemetry.io/inject: "true"
    instrumentation.opentelemetry.io/inject-java: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "true"
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: orders-service
        framework: spring

    spec:
      containers:
      - name: orders-service
        image: datnd2711/microsv-order-svc:release-v4
        ports:
        - containerPort: 8081
          name: http-orders
      imagePullSecrets:
      - name: my-dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: microsvc

spec:
  selector:
    app: orders-service
  ports:
  - protocol: TCP
    port: 8081
    targetPort: http-orders

# kubectl create secret docker-registry my-dockerhub-secret -n microsvc \
# --docker-username=datnd2711 \
# --docker-password=dckr_pat_L-zYxI1kfRPPbc2wxdKDvN-uscs \
# --docker-server=https://hub.docker.com/
