k8s/product-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: microsvc
  annotations:
    sidecar.opentelemetry.io/inject: "true"
    instrumentation.opentelemetry.io/inject-java: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "true"
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: product-service
        framework: spring

    spec:
      containers:
      - name: product-service
        image: datnd2711/microsv-product-svc:latest
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: microsvc

spec:
  selector:
    app: product-service
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
  type: ClusterIP
