k8s/apigw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigw-ingress
  namespace: microsvc

spec:
  ingressClassName: nginx

  rules:
  - host: ecom-api.datlaid.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              name: http-apigw
