k8s/noti-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-noti-ingress
  namespace: microsvc
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-set-headers: |
      - name: Connection
        value: "Upgrade"
      - name: Upgrade
        value: "websocket"

spec:
  ingressClassName: nginx
  rules:
  - host: ecom-noti.datlaid.com
    http:
      paths:
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 8083
